bugfix rankings on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -385,6 +385,9 @@ div.ranking .table {
   overflow: auto;
   margin: 1rem;
   text-align: left;
+  max-width: 100%;
+  font-size: 80%;
+  overflow: auto;
 }
 
 thead {
